--- a/index.html
+++ b/index.html
@@ -1,116 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="An easy to use online dice rolling system for the tabletop game Dungeons and Dragons.">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css?v=1.03">
-  <link rel="icon" type="image/x-icon" href="imgs/favicon.ico">
-  <title>Easy DnD Rolls - Easy To Use DnD Dice Roller</title>
-</head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-TRJ6YHWE67"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
-  gtag('js', new Date());
-
-  gtag('config', 'G-TRJ6YHWE67');
-</script>
-<body>
-  <div class="body-container">
-  <header class="header">
-    <h1 class="heading">Easy <span>DnD</span> Rolls</h1>
-    <p class="header-description">An easy to use online dice rolling system for the tabletop game <span>Dungeons and Dragons</span>.</p>
-  </header>
-  <div class="app-container">
-  <section class="rolling-choices">
-      <h2 class="secondary-heading">Choose Your Dice</h2>
-      <div class="dice-options">
-        <img src="imgs/d20.png" alt="d20" class="dice-image" />
-        <img src="imgs/d12.png" alt="d12" class="dice-image" />
-        <img src="imgs/d10.png" alt="d10" class="dice-image" />
-        <img src="imgs/d8.png" alt="d8" class="dice-image" />
-        <img src="imgs/d6.png" alt="d6" class="dice-image" />
-        <img src="imgs/d4.png" alt="d4" class="dice-image" />
-        <div class="dice-choice">
-          <input type="radio" id="d20" value="20" name="dice">
-          <label class="dice" for="d20">D20</label>
-        </div>
-        <div class="dice-choice">
-          <input type="radio" id="d12" value="12" name="dice">
-          <label class="dice" for="d12">D12</label>
-        </div>
-        <div class="dice-choice">
-          <input type="radio" id="d10" value="10" name="dice">
-          <label class="dice" for="d10">D10</label>
-        </div>
-        <div class="dice-choice">
-          <input type="radio" id="d8" value="8" name="dice">
-          <label class="dice" for="d8">D8</label>
-        </div>  
-        <div class="dice-choice">
-          <input type="radio" id="d6" value="6" name="dice">
-          <label class="dice" for="d6">D6</label>
-        </div>
-        <div class="dice-choice">
-          <input type="radio" id="d4" value="4" name="dice">
-          <label class="dice" for="d4">D4</label>
-        </div>  
-      </div>
-    </section>
-
-    <section class="rolling-options">
-      <div class="modifier-options">
-        <p class="modifier-text">Modifier:</p>
-        <button class="counter-buttons" id="plus-button">+</button>
-        <p class="modifier-counter">+0</p>
-        <button class="counter-buttons" id="minus-button">-</button>
-      </div>
-      <div class="adv-or-dis">
-        <div class="adv-or-dis-choice">
-          <input type="checkbox" id="advantage" value="advantage" name="adv-or-dis" class="adv-or-dis-checkbox">
-          <label for="advantage">Advantage</label>
-        </div>
-        <div class="adv-or-dis-choice">
-          <input type="checkbox" id="disadvantage" value="disadvantage" name="adv-or-dis" class="adv-or-dis-checkbox">
-          <label for="disadvantage">Disadvantage</label>
-        </div>
-      </div>
-    </section>
-
-    <section class="rolling-results">
-      <button class="rolling-button">Roll</button>
-      <div class="roll-result">
-        <p class="roll-result-text"></p>
-      </div>
-      <p class="roll-result-info"></p>
-      <p class="roll-adv-or-dis-info"></p>
-    </section>
-
-    <section class="rolling-log">
-      <div class="rolling-log-top">
-        <h2 class="secondary-heading">Dice Rolls Log</h2>
-        <button class="clear-log-button">Clear Log</button>
-      </div>
-      <ul class="rolling-log-results">
-        
-      </ul>
-    </section>
-  </div>
-  
-
-  <footer class="footer">
-    <p class="footer-text">Easy DnD Rolls is unofficial Fan Content permitted under the Fan Content Policy. Not approved/endorsed by Wizards.
-    Portions of the materials used are property of Wizards of the Coast. ©Wizards of the Coast LLC.</p>
-  </footer>
-  </div>
-  
-
-
-<script src="script.js?v=1.03"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>easy-dnd-rolls</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
